# LocalLLMConnector

./: .gitignore  README.md
node/: package.json
node/samples/: node_example.js  node_vision_example.js
node/src/: client.js  index.js
python/: pyproject.toml
python/samples/: python_example.py  python_vision_example.py
python/src/localllmconnector/: __init__.py  client.py
